--- a/CMU15721.md
+++ b/CMU15721.md
@@ -1,28 +1,29 @@
 # CMU 15-721 course paper[link][cum15721]
+
 [cmu15721]:https://15721.courses.cs.cmu.edu/spring2020/schedule.html
 
 ## Course Introduction and History of Databases (No In-Class Lecture)
-M. Stonebraker, et al., What Goes Around Comes Around, in Readings in Database Systems, 4th Edition, 2006 (Optional)
-A. Pavlo, et al., What's New with NewSQL?, in SIGMOD Record (vol. 45, iss. 2), 2016 (Optional)
++ M. Stonebraker, et al., What Goes Around Comes Around, in Readings in Database Systems, 4th Edition, 2006 (Optional)
++ A. Pavlo, et al., What's New with NewSQL?, in SIGMOD Record (vol. 45, iss. 2), 2016 (Optional)
 
 ## In-memory Database
-**X. Yu, et al., Staring into the Abyss: An Evaluation of Concurrency Control with One Thousand Cores, in VLDB, 2014** 
+X. Yu, et al., Staring into the Abyss: An Evaluation of Concurrency Control with One Thousand Cores, in VLDB, 2014 
 S. Harizopoulos, et al., OLTP Through the Looking Glass, and What We Found There, in SIGMOD, 2008 (Optional)
 H. Garcia-Molina, et al., Main Memory Database Systems: An Overview, in IEEE Trans. on Knowl. and Data Eng., 1992 (Optional)
 
 ## Multi-Version Concurrency Control (Design Decisions)
-**Y. Wu, et al., An Empirical Evaluation of In-Memory Multi-Version Concurrency Control, in VLDB, 2017** 
-D.R.K. Ports, et al., Serializable Snapshot Isolation in PostgreSQL, in VLDB, 2012 (Optional)
-Y. Huang, et al., Opportunities for Optimism in Contended Main-Memory Multicore Transactions, in VLDB, 2020 (Optional)
++ Y. Wu, et al., An Empirical Evaluation of In-Memory Multi-Version Concurrency Control, in VLDB, 2017 
++ D.R.K. Ports, et al., Serializable Snapshot Isolation in PostgreSQL, in VLDB, 2012 (Optional)
++ Y. Huang, et al., Opportunities for Optimism in Contended Main-Memory Multicore Transactions, in VLDB, 2020 (Optional)
 
 ## Multi-Version Concurrency Control (Protocols)
-**T. Neumann, et al., Fast Serializable Multi-Version Concurrency Control for Main-Memory Database Systems, in SIGMOD, 2015** 
-H. Lim, et al., Cicada: Dependably Fast Multi-Core In-Memory Transactions, in SIGMOD, 2017 (Optional)
-P.-A. Larson, et al., High-Performance Concurrency Control Mechanisms for Main-Memory Databases, in VLDB, 2011 (Optional)
++ T. Neumann, et al., Fast Serializable Multi-Version Concurrency Control for Main-Memory Database Systems, in SIGMOD, 2015
++ H. Lim, et al., Cicada: Dependably Fast Multi-Core In-Memory Transactions, in SIGMOD, 2017 (Optional)
++ P.-A. Larson, et al., High-Performance Concurrency Control Mechanisms for Main-Memory Databases, in VLDB, 2011 (Optional)
 
 ## Multi-Version Concurrency Control (Garbage Collection)
-**J. Böttcher, et al., Scalable Garbage Collection for In-Memory MVCC Systems, in VLDB, 2019** 
-J. Lee, et al., Hybrid Garbage Collection for Multi-Version Concurrency Control in SAP HANA, in SIGMOD, 2016 (Optional)
++ J. Böttcher, et al., Scalable Garbage Collection for In-Memory MVCC Systems, in VLDB, 2019
++ J. Lee, et al., Hybrid Garbage Collection for Multi-Version Concurrency Control in SAP HANA, in SIGMOD, 2016 (Optional)
 
 ## OLTP Index(B+ Tree Data Structures)
 Z. Wang, et al., Building A Bw-Tree Takes More Than Just Buzz Words, in SIGMOD, 2018 
