--- a/CMU15721.md
+++ b/CMU15721.md
@@ -1,5 +1,4 @@
-# CMU 15-721 course paper
-[link][cum15721]
+# CMU 15-721 course paper[link][cmu15721]
 
 [cmu15721]:https://15721.courses.cs.cmu.edu/spring2020/schedule.html
 
@@ -12,19 +11,27 @@
 + S. Harizopoulos, et al., OLTP Through the Looking Glass, and What We Found There, in SIGMOD, 2008 (Optional)
 + H. Garcia-Molina, et al., Main Memory Database Systems: An Overview, in IEEE Trans. on Knowl. and Data Eng., 1992 (Optional)
 
-## Multi-Version Concurrency Control (Design Decisions)
-+ Y. Wu, et al., An Empirical Evaluation of In-Memory Multi-Version Concurrency Control, in VLDB, 2017 
-+ D.R.K. Ports, et al., Serializable Snapshot Isolation in PostgreSQL, in VLDB, 2012 (Optional)
-+ Y. Huang, et al., Opportunities for Optimism in Contended Main-Memory Multicore Transactions, in VLDB, 2020 (Optional)
+[comment]: <> (## Multi-Version Concurrency Control &#40;Design Decisions&#41;)
 
-## Multi-Version Concurrency Control (Protocols)
-+ T. Neumann, et al., Fast Serializable Multi-Version Concurrency Control for Main-Memory Database Systems, in SIGMOD, 2015
-+ H. Lim, et al., Cicada: Dependably Fast Multi-Core In-Memory Transactions, in SIGMOD, 2017 (Optional)
-+ P.-A. Larson, et al., High-Performance Concurrency Control Mechanisms for Main-Memory Databases, in VLDB, 2011 (Optional)
+[comment]: <> (+ Y. Wu, et al., An Empirical Evaluation of In-Memory Multi-Version Concurrency Control, in VLDB, 2017 )
 
-## Multi-Version Concurrency Control (Garbage Collection)
-+ J. Böttcher, et al., Scalable Garbage Collection for In-Memory MVCC Systems, in VLDB, 2019
-+ J. Lee, et al., Hybrid Garbage Collection for Multi-Version Concurrency Control in SAP HANA, in SIGMOD, 2016 (Optional)
+[comment]: <> (+ D.R.K. Ports, et al., Serializable Snapshot Isolation in PostgreSQL, in VLDB, 2012 &#40;Optional&#41;)
+
+[comment]: <> (+ Y. Huang, et al., Opportunities for Optimism in Contended Main-Memory Multicore Transactions, in VLDB, 2020 &#40;Optional&#41;)
+
+[comment]: <> (## Multi-Version Concurrency Control &#40;Protocols&#41;)
+
+[comment]: <> (+ T. Neumann, et al., Fast Serializable Multi-Version Concurrency Control for Main-Memory Database Systems, in SIGMOD, 2015)
+
+[comment]: <> (+ H. Lim, et al., Cicada: Dependably Fast Multi-Core In-Memory Transactions, in SIGMOD, 2017 &#40;Optional&#41;)
+
+[comment]: <> (+ P.-A. Larson, et al., High-Performance Concurrency Control Mechanisms for Main-Memory Databases, in VLDB, 2011 &#40;Optional&#41;)
+
+[comment]: <> (## Multi-Version Concurrency Control &#40;Garbage Collection&#41;)
+
+[comment]: <> (+ J. Böttcher, et al., Scalable Garbage Collection for In-Memory MVCC Systems, in VLDB, 2019)
+
+[comment]: <> (+ J. Lee, et al., Hybrid Garbage Collection for Multi-Version Concurrency Control in SAP HANA, in SIGMOD, 2016 &#40;Optional&#41;)
 
 ## OLTP Index(B+ Tree Data Structures)
 + Z. Wang, et al., Building A Bw-Tree Takes More Than Just Buzz Words, in SIGMOD, 2018 
@@ -55,17 +62,25 @@
 + H. Zhang, et al., Reducing the Storage Overhead of Main-Memory OLTP Databases with Hybrid Indexes, in SIGMOD, 2016 (Optional)
 + C. Liu, et al., Mostly Order Preserving Dictionaries, in ICDE, 2019 (Optional)
 
-## Recovery Protocols
-+ P. Antonopoulos, et al., Constant Time Recovery in Azure SQL Database, in VLDB, 2019 
-+ W. Zheng, et al., Fast Databases with Fast Durability and Recovery Through Multicore Parallelism, in OSDI, 2014 (Optional)
-+ A. Goel, et al., Fast Database Restarts at Facebook, in SIGMOD, 2014 (Optional)
-+ K. Ren, et al., Low-Overhead Asynchronous Checkpointing in Main-Memory Database Systems, in SIGMOD, 2016 (Optional)
-+ N. Malviya, et al., Rethinking Main Memory OLTP Recovery, in ICDE, 2014 (Optional)
+[comment]: <> (## Recovery Protocols)
 
-## Networking Protocols
-+ M. Raasveldt, et al., Don't Hold My Data Hostage: A Case for Client Protocol Redesign, in VLDB, 2017 
-+ F. Li, et al., Accelerating Relational Databases by Leveraging Remote Memory and RDMA, in SIGMOD, 2016 (Optional)
-+ F. Binnig, et al., The End of Slow Networks: It's Time for a Redesign, in VLDB, 2016 (Optional)
+[comment]: <> (+ P. Antonopoulos, et al., Constant Time Recovery in Azure SQL Database, in VLDB, 2019 )
+
+[comment]: <> (+ W. Zheng, et al., Fast Databases with Fast Durability and Recovery Through Multicore Parallelism, in OSDI, 2014 &#40;Optional&#41;)
+
+[comment]: <> (+ A. Goel, et al., Fast Database Restarts at Facebook, in SIGMOD, 2014 &#40;Optional&#41;)
+
+[comment]: <> (+ K. Ren, et al., Low-Overhead Asynchronous Checkpointing in Main-Memory Database Systems, in SIGMOD, 2016 &#40;Optional&#41;)
+
+[comment]: <> (+ N. Malviya, et al., Rethinking Main Memory OLTP Recovery, in ICDE, 2014 &#40;Optional&#41;)
+
+[comment]: <> (## Networking Protocols)
+
+[comment]: <> (+ M. Raasveldt, et al., Don't Hold My Data Hostage: A Case for Client Protocol Redesign, in VLDB, 2017 )
+
+[comment]: <> (+ F. Li, et al., Accelerating Relational Databases by Leveraging Remote Memory and RDMA, in SIGMOD, 2016 &#40;Optional&#41;)
+
+[comment]: <> (+ F. Binnig, et al., The End of Slow Networks: It's Time for a Redesign, in VLDB, 2016 &#40;Optional&#41;)
 
 ## Scheduling
 + V. Leis, et al., Morsel-Driven Parallelism: A NUMA-Aware Query Evaluation Framework for the Many-Core Age, in SIGMOD, 2014 
